--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,16 @@
 
 html, body {
   height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-overlay-pane {
+  max-height: calc(100vh - 20px) !important;
+  max-width: calc(100vw - 20px) !important;
 }
